syntax = "proto3";
package emerald.vault;

message File {
    FileType file_type = 1;
    bytes id = 2;
}

enum FileType {
    FILE_UNKNOWN = 0;
    FILE_WALLET = 1;
    FILE_PK = 2;
    FILE_SEED = 3;
    FILE_BOOK = 4;
}

enum BlockchainId {
    CHAIN_UNSPECIFIED = 0;

    CHAIN_BITCOIN = 1;
    // CHAIN_GRIN = 2;

    CHAIN_ETHEREUM = 100;
    CHAIN_ETHEREUM_CLASSIC = 101;

    // Sidechains and state channels start with 1_000
    // CHAIN_LIGHTNING = 1001;
    CHAIN_MATIC = 1002; // Matic PoS Ethereum sidechain based on Polygon
    CHAIN_RSK = 1003; // RSK sidechain, https://www.rsk.co/

    // Testnets start with 10_000
    CHAIN_MORDEN = 10001;
    CHAIN_KOVAN = 10002;
    CHAIN_TESTNET_BITCOIN = 10003;
    // CHAIN_FLOONET = 10004;
    CHAIN_GOERLI = 10005;
    CHAIN_ROPSTEN = 10006;
    CHAIN_RINKEBY = 10007;
}
